2008-08-07  Jesse van den Kieboom  <jesse@icecrew.nl>

	* client/gdaemonfileoutputstream.c:
	Fixed crash in gio because error was not properly
	being set in the query_info noop

2008-08-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* daemon/gvfsbackendsftp.c:
	Added restoring file permissions when replacing a file.

2008-08-05  Christian Kellner  <gicmo@gnome.org>

	* client/gdaemonfile.c:
	Remove wrong dbus reply struct checks for replace_async,
	create_async and append_async that would live to (false)
	invalid reply errors.

2008-08-05  Jesse van den Kieboom  <jesse@icecrew.nl>

	* client/gdaemonfile.c:
	Set etag to "" when supplied to g_daemon_file_replace_async
	with NULL. Bug #546300

2008-08-05  Christian Kellner  <gicmo@gnome.org>

	* configure.ac: Post-release bump to 0.99.5.

=== gvfs 0.99.4 ===

2008-08-05  Christian Kellner  <gicmo@gnome.org>

	* NEWS: Update for release

2008-08-05  Christian Kellner  <gicmo@gnome.org>

	* configure.ac:
	Require glib 2.17.6 (cause by GEmblemedIcon changes)

2008-08-05  Christian Kellner  <gicmo@gnome.org>

	* monitor/hal/ghaldrive.c: 
	Various ref counting fixes.

	* monitor/hal/ghalvolume.c:
	Report error in idle to avoid calling a callback with the
	volume lock held.
	Use volume lock in hhal_volume_get_activation_root. Various
	ref counting fixes.

	Bug #545489. Based on a patch from Matthias Clasen.

2008-08-04  Christian Kellner  <gicmo@gnome.org>

	* client/gdaemonfile.c: (g_daemon_file_replace_async):
	Correctly set the mode to 2 resulting in the replace vfunc being
	called inside the backends.
	Bug #544008. Patch by Jesse van den Kieboom <jesse@icecrew.net>

2008-08-04  Matthias Clasen  <mclasen@redhat.com>

	* monitor/proxy/gvfsproxyvolumemonitordaemon.c:
	* monitor/proxy/gproxyvolumemonitor.c: Update the GIcon serialization
	code to work with GEmblem.

2008-08-03  Christian Kellner  <gicmo@gnome.org>

	* client/gvfsfusedaemon.c:
	Avoid a race between the subthread and the main thread in the case